--- a/gb/17/2/14/n8810421.md
+++ b/gb/17/2/14/n8810421.md
@@ -12,10 +12,6 @@
 <p>欲前往岛礁矶钓的民众，须先到基隆区渔会申请矶钓证，才能进行矶钓。2月20日起，可至基隆市政府及基隆区渔会网站下载申请表，3月1日起，基隆区渔会开始受理申办。</p>
 <p>钓客若钓上小于20公分的渔获，不得携回必须放游，但雀鲷科与舵鱼科鱼种原来就不会长于20公分除外。而钓客离开岛礁前，也要清礁收拾残留诱饵及垃圾整理环境，恶意破坏者屡劝不听，将注销矶钓证，未满1年或未缴清罚款前，不得再申请。</p>
 <p>责任编辑：郑桦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/8/11/22/n2337747.md#1">黑潮不靠岸  台东钓友改钓龙虾&nbsp;</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/17/n2432444.md#1">台东沿海鲨鱼出没频繁  渔民提醒钓友注意</a></li>
@@ -24,40 +20,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/9/12/10/n2750582.md#1">公海危机 联合国拟严加限制渔业活动</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/9/12/11/n2750853.md#1">钓友遇袭案结案陈词 控辩激烈 周一判决</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/17/n8007645.md#1">放流评估宣导有效 钓友捕获标签黑鲷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067399.md#1">海葵重创台东校园 县府动支紧急预算复建</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067388.md#1">预防长者失智 基隆举办拉密桌游闯关活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067414.md#1">基市孝行楷模表扬 谢国梁赞孝顺是爱的延伸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137772.md#1">基隆塔启用 谢国梁邀远见人文空间进驻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137245.md#1">宜花东TPASS大联盟 食宿旅游一票行</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137282.md#1">发扬有爱城市 基市妇女学苑动静态成果发表</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711194.md#1" target="_blank">“富田兵变”遭镇压 尸体填满整个山沟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066098.md#1">奥地利女子转生为邻居的儿子 过世前就预告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066016.md#1">【新闻五人行】习步步惊心 亡党十大败相齐了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065900.md#1">【全球新闻】宝马“新世代”概念车全球首发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065901.md#1">【环球直击】中国全民抓间谍《反间谍条例》上路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063615.md#1">为何有很多美国人不想成为Costco会员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065894.md#1">习近平喊话开放服务业 学者：需解决安全问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066046.md#1">沈舟：美军反击中共的1000个目标有哪些</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065575.md#1">“香港才子”蔡澜近况曝光 坐轮椅现身大马</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065521.md#1">逃税传闻发酵 宋祖儿遭5大卫视官微删除内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066400.md#1">悲观发文后帅气现身 胡歌与梁朝伟合照露灿笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066215.md#1">梁朝伟领威尼斯终身成就奖 泪谢李安与刘嘉玲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066410.md#1">演唱会上蚊子飞进嘴里 李荣浩的反应笑翻歌迷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062927.md#1">番薯及蕃薯叶护眼降血糖 一个禁忌要知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056270.md#1">防便秘这样做都错了！医师破解5迷思 加1物就通便</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060964.md#1">脑中一部位过度活跃 导致温柔女子追杀老公</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066217.md#1">老是缩小腹 竟然有害身体？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059859.md#1">失眠易致失智肥胖 中医5方法改善 独创颈椎疗法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136979.md#1">【环球直击】英美谴责港府通缉五港人 关切黎智英案</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135860.md#1">【菁英论坛】金融大崩溃 诸侯将崛起</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/14/n8810421.htm">基隆市3月1日起受理申办岛礁矶钓证</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/17/2/14/n8810421.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
